--- a/src/main/resources/static/pages/UI/modals.html
+++ b/src/main/resources/static/pages/UI/modals.html
@@ -792,13 +792,13 @@
               </div>
               <div class="card-body">
                 <button type="button" class="btn btn-default toastsDefaultDefault">
-                  Launch Default Toast
+                  Launch Default MyToast
                 </button>
                 <button type="button" class="btn btn-default toastsDefaultFull">
-                  Launch Full Toast (with icon)
+                  Launch Full MyToast (with icon)
                 </button>
                 <button type="button" class="btn btn-default toastsDefaultFullImage">
-                  Launch Full Toast (with image)
+                  Launch Full MyToast (with image)
                 </button>
                 <button type="button" class="btn btn-default toastsDefaultAutohide">
                   Launch Default Toasts with autohide
@@ -809,30 +809,30 @@
                 <br />
                 <br />
                 <button type="button" class="btn btn-default toastsDefaultTopLeft">
-                  Launch Default Toast (topLeft)
+                  Launch Default MyToast (topLeft)
                 </button>
                 <button type="button" class="btn btn-default toastsDefaultBottomRight">
-                  Launch Default Toast (bottomRight)
+                  Launch Default MyToast (bottomRight)
                 </button>
                 <button type="button" class="btn btn-default toastsDefaultBottomLeft">
-                  Launch Default Toast (bottomLeft)
+                  Launch Default MyToast (bottomLeft)
                 </button>
                 <br />
                 <br />
                 <button type="button" class="btn btn-success toastsDefaultSuccess">
-                  Launch Success Toast
+                  Launch Success MyToast
                 </button>
                 <button type="button" class="btn btn-info toastsDefaultInfo">
-                  Launch Info Toast
+                  Launch Info MyToast
                 </button>
                 <button type="button" class="btn btn-warning toastsDefaultWarning">
-                  Launch Warning Toast
+                  Launch Warning MyToast
                 </button>
                 <button type="button" class="btn btn-danger toastsDefaultDanger">
-                  Launch Danger Toast
+                  Launch Danger MyToast
                 </button>
                 <button type="button" class="btn btn-default bg-maroon toastsDefaultMaroon">
-                  Launch Maroon Toast
+                  Launch Maroon MyToast
                 </button>
                 <div class="text-muted mt-3">
 
@@ -849,19 +849,19 @@
               </div>
               <div class="card-body">
                 <button type="button" class="btn btn-success swalDefaultSuccess">
-                  Launch Success Toast
+                  Launch Success MyToast
                 </button>
                 <button type="button" class="btn btn-info swalDefaultInfo">
-                  Launch Info Toast
+                  Launch Info MyToast
                 </button>
                 <button type="button" class="btn btn-danger swalDefaultError">
-                  Launch Error Toast
+                  Launch Error MyToast
                 </button>
                 <button type="button" class="btn btn-warning swalDefaultWarning">
-                  Launch Warning Toast
+                  Launch Warning MyToast
                 </button>
                 <button type="button" class="btn btn-default swalDefaultQuestion">
-                  Launch Question Toast
+                  Launch Question MyToast
                 </button>
                 <div class="text-muted mt-3">
                   For more examples look at <a href="https://sweetalert2.github.io/">https://sweetalert2.github.io/</a>
@@ -879,16 +879,16 @@
               </div>
               <div class="card-body">
                 <button type="button" class="btn btn-success toastrDefaultSuccess">
-                  Launch Success Toast
+                  Launch Success MyToast
                 </button>
                 <button type="button" class="btn btn-info toastrDefaultInfo">
-                  Launch Info Toast
+                  Launch Info MyToast
                 </button>
                 <button type="button" class="btn btn-danger toastrDefaultError">
-                  Launch Error Toast
+                  Launch Error MyToast
                 </button>
                 <button type="button" class="btn btn-warning toastrDefaultWarning">
-                  Launch Warning Toast
+                  Launch Warning MyToast
                 </button>
                 <div class="text-muted mt-3">
                   For more examples look at <a href="https://codeseven.github.io/toastr/">https://codeseven.github.io/toastr/</a>
@@ -1188,7 +1188,7 @@
 
 <script type="text/javascript">
   $(function() {
-    const Toast = Swal.mixin({
+    const MyToast = Swal.mixin({
       toast: true,
       position: 'top-end',
       showConfirmButton: false,
